Issue #202 Missing dependencies UI